crates/air_r_parser/tests/snapshots/error/call_error.R
# TODO: Enable error tests for this. It fails to parse due to sequential arguments.
fn(a b)
